fixed styling for brands on mobile

--- a/src/container/Testimonial/Testimonial.scss
+++ b/src/container/Testimonial/Testimonial.scss
@@ -129,11 +129,29 @@
       margin: 2rem;
     }
     @media screen and (max-width: 450px) {
-      width: 120px;
       margin: 1rem;
+      flex-wrap: nowrap;
     }
     @media screen and (max-width: 800px) {
       width: 100%;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    div {
+      flex: 1 1;
+
+      img {
+        width: 100px;
+      }
+    }
+  }
+  @media screen and (max-width: 450px) {
+    div {
+      flex: 1 1;
+
+      img {
+        width: 100px;
+      }
     }
   }
 }
